# blabla_forward

./: .gitignore  Cargo.toml
src/: main.rs  message_handler.rs  publisher.rs  settings.rs
src/bot_impl/: channel_id.rs  discord_bot.rs  discord_bot_listener.rs  mod.rs  telegram_bot.rs  uni_message.rs
src/bot_traits/: connect.rs  listen.rs  messenger_bot.rs  mod.rs  send.rs
